@@ -1,3 +1,9 @@
+2006-12-24  Kazu Hirata  <kazu@codesourcery.com>
+
+	* m68k.h (mcfmac, mcfemac, cfloat, mcfhwdiv, mcfisa_a,
+	mcfisa_aa, mcfisa_b, mcfusp, mcf_mask): Double the defined
+	values.
+
 2006-11-08  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* i386.h (i386_optab): Replace CpuPNI with CpuSSE3.
